--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 h1 {
     margin-top: 20px;
     text-align: center;
-    font-size: 50px;
+    font-size: 42px;
 }
 
 .main {
@@ -32,13 +32,18 @@ h1 {
 
 #input {
     width: calc(80% - 20px);
-    font-size: 20px;
+    font-size: 18px;
     padding: 0 20px;
     border: none;
     border-bottom: 2px solid #c4c4c4;
     background: #f1f0f0;
     border-radius: 4px 4px 0 0;
     outline: none;
+    transition: .3s all;
+}
+
+#input:focus {
+    border-bottom: 2px solid #f4a261;
 }
 
 #add {
