--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,11 @@ h1 {
 
 .input-container {
     width: 500px;
-}
-
-.input-container form {
-    width: 100%;
+    height: 40px;
     display: flex;
     justify-content: space-between;
-    height: 40px;
 }
+
 
 #input {
     width: calc(80% - 20px);
@@ -63,4 +60,14 @@ h1 {
 .list {
     margin-top: 20px;
     width: 500px;
+}
+
+.list-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.list-item img {
+    cursor: pointer;
 }
