--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,14 @@ h1 {
 
 .input-container {
     width: 500px;
+}
+
+.input-container form {
+    width: 100%;
     height: 40px;
     display: flex;
     justify-content: space-between;
 }
-
 
 #input {
     width: calc(80% - 20px);
@@ -63,6 +66,7 @@ h1 {
 }
 
 .list-item {
+    margin-top: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -70,4 +74,16 @@ h1 {
 
 .list-item img {
     cursor: pointer;
+    width: 30px;
 }
+
+.list-item span {
+    width: 85%;
+    font-size: 20px;
+}
+
+.checked {
+    opacity: 0.5;
+    text-decoration: line-through;
+}
+
